--- a/HTML/HTML/login.html
+++ b/HTML/HTML/login.html
@@ -15,7 +15,10 @@
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
-
+            color: blueviolet;
+        }
+        a{
+            text-decoration: none;
         }
     </style>
 </head>
@@ -26,6 +29,6 @@
         <form action="form.js", method="get", onsubmit="submitForm(event)">
             <input type="text" placeholder="이메일"><br>
             <input type="password" placeholder="비밀번호">
-            <br><a href="">회원가입</a>
+            <br><a href="/join.html">회원가입</a>
     </div>
 </body>
